@startuml ERD_DashboardGuru
!define ENTITY_COLOR #FFE4E1
!define PK_COLOR #FFB6C1
!define FK_COLOR #87CEEB

entity users {
    * id : int <<PK>>
    --
    * name : varchar(100)
    * username : varchar(100) <<UK>>
    * password : varchar(100)
    * role : tinyint
    email : varchar(100)
    phone : varchar(20)
    img : varchar(100)
    login_at : timestamp
    created_at : timestamp
    updated_at : timestamp
}

entity admins {
    * id : int <<PK>>
    --
    * name : varchar(100)
    * username : varchar(50) <<UK>>
    * password : varchar(100)
    * role : tinyint
    position : varchar(20)
    phone : varchar(20)
    img : varchar(100)
    login_at : timestamp
    created_at : timestamp
    updated_at : timestamp
}

entity products {
    * id : int <<PK>>
    --
    * name : varchar(50)
    grade : varchar(50)
    * grade_category : varchar(100)
    semester : varchar(50)
    created_at : timestamp
    updated_at : timestamp
}

entity serials {
    * id : int <<PK>>
    --
    user_id : int <<FK>>
    * product_id : int <<FK>>
    * serial : varchar(50) <<UK>>
    * paket : varchar(1)
    * active : varchar(3)
    expired_at : timestamp
    notif : enum
    created_at : timestamp
    updated_at : timestamp
}

entity classrooms {
    * id : int <<PK>>
    --
    * serial_id : int <<FK>>
    * name : varchar(100)
    * grade : varchar(10)
    * code : varchar(24) <<UK>>
    created_at : timestamp
    updated_at : timestamp
}

entity students {
    * id : int <<PK>>
    --
    * serial_id : int <<FK>>
    * user_id : int <<FK>>
    * classroom_id : int <<FK>>
    * name : varchar(200)
    * username : varchar(100) <<UK>>
    * password : varchar(150)
    nis : varchar(20)
    absen_number : int
    email : varchar(100)
    phone : varchar(20)
    photo : varchar(255)
    created_at : timestamp
    updated_at : timestamp
    deleted_at : timestamp
}

entity mapels {
    * id : int <<PK>>
    --
    * name : varchar(50)
    created_at : timestamp
    updated_at : timestamp
}

entity lessons {
    * id : int <<PK>>
    --
    * mapel_id : int <<FK>>
    * name : varchar(50)
    * grade : varchar(10)
    * semester : tinyint
    category : tinyint
    created_at : timestamp
    updated_at : timestamp
}

entity competences {
    * id : int <<PK>>
    --
    * lesson_id : int <<FK>>
    * mapel_id : int <<FK>>
    * point : varchar(10)
    description : text
    created_at : timestamp
    updated_at : timestamp
}

entity themes {
    * id : int <<PK>>
    --
    * name : varchar(200)
    created_at : timestamp
    updated_at : timestamp
}

entity subthemes {
    * id : int <<PK>>
    --
    * lesson_id : int <<FK>>
    * theme_id : int <<FK>>
    * subtheme : int
    * name : varchar(200)
    created_at : timestamp
    updated_at : timestamp
}

entity lesson_items {
    * id : int <<PK>>
    --
    * lesson_id : int <<FK>>
    * theme_id : int <<FK>>
    * subtheme_id : int <<FK>>
    * admin_id : int <<FK>>
    * number : int
    * title : text
    * embed : text
    created_at : timestamp
    updated_at : timestamp
}

entity exercises {
    * id : int <<PK>>
    --
    * lesson_id : int <<FK>>
    serial_id : int <<FK>>
    * exercise_type_id : int <<FK>>
    title : varchar(200)
    is_admin : boolean
    created_at : timestamp
    updated_at : timestamp
    deleted_at : timestamp
}

entity exercise_types {
    * id : int <<PK>>
    --
    * kode : varchar(10)
    * name : varchar(50)
    created_at : timestamp
    updated_at : timestamp
}

entity exercise_models {
    * id : int <<PK>>
    --
    * name : varchar(50)
    created_at : timestamp
    updated_at : timestamp
}

entity exercise_items {
    * id : int <<PK>>
    --
    admin_id : int <<FK>>
    user_id : int <<FK>>
    competence_id : int <<FK>>
    * exercise_id : int <<FK>>
    * exercise_type_id : int <<FK>>
    * exercise_model_id : int <<FK>>
    * exercise_choice : tinyint
    * exercise_number : int
    * question : text
    selection : text
    answer : text
    is_user : boolean
    created_at : timestamp
    updated_at : timestamp
}

entity exercise_points {
    * id : int <<PK>>
    --
    * serial_id : int <<FK>>
    * exercise_id : int <<FK>>
    * student_id : int <<FK>>
    * answer : text
    competence_point : text
    exercise_point : varchar(3)
    created_at : timestamp
    updated_at : timestamp
}

entity posts {
    * id : int <<PK>>
    --
    * serial_id : int <<FK>>
    * user_id : int <<FK>>
    * mapel_id : int <<FK>>
    * title : varchar(150)
    description : text
    * slug : varchar(200) <<UK>>
    link : text
    attachment : text
    embed : text
    due_date : timestamp
    category : varchar(255)
    is_task : boolean
    created_at : timestamp
    updated_at : timestamp
    deleted_at : timestamp
}

entity tasks {
    * id : int <<PK>>
    --
    * serial_id : int <<FK>>
    * post_id : int <<FK>>
    * student_id : int <<FK>>
    * description : text
    attachment : text
    point : varchar(3)
    created_at : timestamp
    updated_at : timestamp
    deleted_at : timestamp
}

entity post_comments {
    * id : int <<PK>>
    --
    * post_id : int <<FK>>
    user_id : int <<FK>>
    student_id : int <<FK>>
    * message : text
    * code : varchar(50) <<UK>>
    is_user : boolean
    created_at : timestamp
    updated_at : timestamp
}

entity post_child_comments {
    * id : int <<PK>>
    --
    * post_comment_id : int <<FK>>
    user_id : int <<FK>>
    student_id : int <<FK>>
    * message : text
    is_user : boolean
    created_at : timestamp
    updated_at : timestamp
}

entity online_meetings {
    * id : int <<PK>>
    --
    * serial_id : int <<FK>>
    * classroom_id : int <<FK>>
    * user_id : int <<FK>>
    * title : varchar(150)
    description : text
    * meeting_code : varchar(50) <<UK>>
    meeting_link : text
    platform : varchar(50)
    * start_time : datetime
    end_time : datetime
    status : enum
    created_at : timestamp
    updated_at : timestamp
}

entity online_meeting_participants {
    * id : int <<PK>>
    --
    * online_meeting_id : int <<FK>>
    * user_id : int <<FK>>
    * role : enum
    * joined_at : datetime
    left_at : datetime
    created_at : timestamp
    updated_at : timestamp
}

entity reports {
    * id : int <<PK>>
    --
    * serial_id : int <<FK>>
    * student_id : int <<FK>>
    * report : text
    img : varchar(255)
    created_at : timestamp
    updated_at : timestamp
}

entity quiz_activity_logs {
    * id : int <<PK>>
    --
    * student_id : int <<FK>>
    * exercise_id : int <<FK>>
    * event_type : varchar(100)
    duration_seconds : int
    suspicious_flag : boolean
    device_info : varchar(255)
    ip_address : varchar(45)
    created_at : timestamp
}

entity question_categories {
    * id : int <<PK>>
    --
    * name : text
    * level : enum
    solution_text : text
    guide_file : text
    guide_video : text
    category_status : enum
    created_at : timestamp
    updated_at : timestamp
}

entity cs_rooms {
    * id : int <<PK>>
    --
    * room_code : varchar(50) <<UK>>
    question_categories_id : int <<FK>>
    student_id : int <<FK>>
    user_id : int <<FK>>
    admin_id : int <<FK>>
    * chat_status : enum
    created_at : timestamp
    updated_at : timestamp
}

entity cs_messages {
    * id : int <<PK>>
    --
    * cs_rooms_id : int <<FK>>
    message_sender : enum
    message_content : text
    sent_time : datetime
    created_at : timestamp
    updated_at : timestamp
}

entity cs_files {
    * id : int <<PK>>
    --
    * room_id : int <<FK>>
    * file_path : varchar(255)
    created_at : timestamp
    updated_at : timestamp
}

entity admin_activity_logs {
    * id : int <<PK>>
    --
    admin_id : int <<FK>>
    * action : varchar(255)
    model : varchar(255)
    data_id : bigint
    description : text
    ip_address : varchar(45)
    created_at : timestamp
    updated_at : timestamp
}

entity email_logs {
    * id : int <<PK>>
    --
    * serial_id : int <<FK>>
    * email_to : varchar(255)
    * subject : varchar(255)
    * email_type : enum
    * status : enum
    * source : enum
    created_at : timestamp
}

entity serial_logs {
    * id : int <<PK>>
    --
    * serial_id : int <<FK>>
    * active : varchar(3)
    * status : enum
    created_at : timestamp
    updated_at : timestamp
}

entity share_exercises {
    * serial_id : int <<PK,FK>>
    * exercise_id : int <<PK,FK>>
    --
    created_at : timestamp
    updated_at : timestamp
}

' Relationships: Users
users ||--o{ serials : "owns"
users ||--o{ students : "creates"
users ||--o{ posts : "creates"
users ||--o{ online_meetings : "schedules"
users ||--o{ online_meeting_participants : "participates"
users ||--o{ exercise_items : "creates"
users ||--o{ post_comments : "comments"
users ||--o{ post_child_comments : "replies"
users ||--o{ cs_rooms : "handles"

' Relationships: Admins
admins ||--o{ lesson_items : "creates"
admins ||--o{ exercise_items : "creates"
admins ||--o{ admin_activity_logs : "generates"
admins ||--o{ cs_rooms : "manages"
admins ||--o{ cs_logs : "logs"

' Relationships: Products & Serials
products ||--o{ serials : "includes"
serials ||--o{ classrooms : "activates"
serials ||--o{ students : "licenses"
serials ||--o{ email_logs : "sends"
serials ||--o{ serial_logs : "tracks"
serials ||--o{ exercises : "shares"
serials ||--o{ online_meetings : "hosts"
serials ||--o{ posts : "contains"
serials ||--o{ reports : "receives"
serials ||--o{ tasks : "tracks"
serials ||--o{ exercise_points : "scores"
serials ||--o{ share_exercises : "shares_to"

' Relationships: Classrooms & Students
classrooms ||--o{ students : "groups"
classrooms ||--o{ online_meetings : "hosts"

' Relationships: MapelsLessons
mapels ||--o{ lessons : "contains"
mapels ||--o{ competences : "defines"
mapels ||--o{ posts : "relates"

' Relationships: Lessons & Hierarchy
lessons ||--o{ competences : "requires"
lessons ||--o{ themes : "uses"
lessons ||--o{ subthemes : "uses"
lessons ||--o{ lesson_items : "contains"
lessons ||--o{ exercises : "includes"

themes ||--o{ subthemes : "contains"
themes ||--o{ lesson_items : "organizes"

subthemes ||--o{ lesson_items : "subdivides"
subthemes ||--o{ subthemes : "references"

' Relationships: Learning Content
lesson_items ||--o{ lesson_items : "references"

' Relationships: Exercises
exercises ||--o{ exercise_items : "contains"
exercises ||--o{ exercise_types : "uses"
exercises ||--o{ exercise_points : "scores"
exercises ||--o{ quiz_activity_logs : "monitors"
exercises ||--o{ share_exercises : "shares_to"

exercise_types ||--o{ exercise_items : "defines"
exercise_models ||--o{ exercise_items : "uses"
competences ||--o{ exercise_items : "requires"

' Relationships: Student Learning
students ||--o{ exercise_points : "answers"
students ||--o{ tasks : "submits"
students ||--o{ reports : "reports"
students ||--o{ post_comments : "comments"
students ||--o{ post_child_comments : "replies"
students ||--o{ quiz_activity_logs : "tracks"
students ||--o{ online_meeting_participants : "joins"
students ||--o{ cs_rooms : "uses"

' Relationships: Posts & Tasks
posts ||--o{ tasks : "assigns"
posts ||--o{ post_comments : "receives"

post_comments ||--o{ post_child_comments : "has"

' Relationships: Online Meetings
online_meetings ||--o{ online_meeting_participants : "hosts"

' Relationships: Customer Support
question_categories ||--o{ cs_rooms : "categorizes"
question_categories ||--o{ cs_logs : "relates"

cs_rooms ||--o{ cs_messages : "contains"
cs_rooms ||--o{ cs_files : "stores"

@enduml
